<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github.esfinge-framework</groupId>
    <artifactId>querybuilder-cassandra</artifactId>
    <version>2.2.2</version>
    <packaging>jar</packaging>

    <name>Esfinge QueryBuilder Cassandra</name>
    <url>https://github.com/EsfingeFramework/querybuilder</url>
    <description>The Esfinge QueryBuilder Cassandra is the persistence framework for Esfinge QueryBuilder using
        Cassandra.
    </description>

    <organization>
        <name>Esfinge Framework</name>
        <url>https://github.com/EsfingeFramework</url>
    </organization>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Eduardo Guerra</name>
            <email>guerraem@gmail.com</email>
            <organization/>
            <organizationUrl/>
        </developer>
        <developer>
            <name>Samuel Dalvai</name>
            <email>samuel.dalvai@gmail.com</email>
            <organization/>
            <organizationUrl/>
        </developer>
        <developer>
            <name>Fernando Pereira</name>
            <email>fernando.opc@gmail.com</email>
            <organization />
            <organizationUrl />
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/EsfingeFramework/querybuilder.git</connection>
        <developerConnection>scm:git:ssh://github.com:EsfingeFramework/querybuilder.git</developerConnection>
        <url>https://github.com/EsfingeFramework/querybuilder/tree/master/QueryBuilder_Cassandra</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.datastax.cassandra</groupId>
            <artifactId>cassandra-driver-mapping</artifactId>
            <version>3.11.5</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.2</version>
        </dependency>
        <dependency>
            <groupId>org.cassandraunit</groupId>
            <artifactId>cassandra-unit</artifactId>
            <version>3.11.2.0</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.cassandra</groupId>
                    <artifactId>cassandra-all</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-library</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.11.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.github.esfinge-framework</groupId>
            <artifactId>querybuilder-core</artifactId>
            <version>2.2.2</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.12.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <release>11</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.4.1</version>
                <executions>
                    <execution>
                        <id>enforce-maven</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.8,)</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>[11,)</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <skipTests>false</skipTests>
                    <argLine>
                        -Dfile.encoding=UTF-8
                        --add-opens java.base/java.lang=cglib
                        --add-opens java.base/java.net=ALL-UNNAMED
                        --add-opens java.base/java.lang.ref=ALL-UNNAMED
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.security=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                        --add-opens java.base/java.nio=ALL-UNNAMED
                        --add-exports java.base/sun.reflect.annotation=ALL-UNNAMED
                        --add-opens java.prefs/java.util.prefs=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing.plaf.basic=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing.text=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing=ALL-UNNAMED
                        --add-opens java.desktop/java.awt=ALL-UNNAMED
                        --add-opens java.desktop/java.awt.event=ALL-UNNAMED
                        --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
                        --add-opens java.desktop/javax.swing.plaf.synth=ALL-UNNAMED
                        --add-opens java.desktop/com.sun.java.swing.plaf.gtk=ALL-UNNAMED
                        --add-opens java.desktop/sun.awt.shell=ALL-UNNAMED
                        --add-opens java.desktop/sun.awt.im=ALL-UNNAMED
                        --add-exports java.desktop/sun.awt=ALL-UNNAMED
                        --add-exports java.desktop/java.awt.peer=ALL-UNNAMED
                        --add-exports java.desktop/com.sun.beans.editors=ALL-UNNAMED
                        --add-exports java.desktop/sun.swing=ALL-UNNAMED
                        --add-exports java.desktop/sun.awt.im=ALL-UNNAMED
                        --add-exports java.desktop/com.sun.java.swing.plaf.motif=ALL-UNNAMED
                        --add-exports java.desktop/com.apple.eio=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                        --add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                        --add-modules=jdk.jshell
                        --add-opens jdk.jshell/jdk.jshell=ALL-UNNAMED
                        --add-exports jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED
                        --add-exports jdk.jdeps/com.sun.tools.javap=ALL-UNNAMED
                        --add-exports jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                        --add-exports jdk.internal.opt/jdk.internal.opt=ALL-UNNAMED
                        --add-exports java.management/sun.management=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>sources</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.10.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>javadoc</classifier>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <useAgent>true</useAgent>
                    <keyname>${gpg.keyname}</keyname>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.nicoulaj.maven.plugins</groupId>
                <artifactId>checksum-maven-plugin</artifactId>
                <version>1.11</version>
                <executions>
                    <execution>
                        <id>checksum-maven-plugin-files</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>files</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <fileSets>
                        <fileSet>
                            <directory>${project.build.directory}</directory>
                            <includes>
                                <include>*.jar</include>
                                <include>*.xml</include>
                                <include>*.pom</include>
                            </includes>
                        </fileSet>
                    </fileSets>
                    <algorithms>
                        <algorithm>MD5</algorithm>
                        <algorithm>SHA-1</algorithm>
                    </algorithms>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>parse-groupId</id>
                        <phase>initialize</phase>
                        <goals>
                            <goal>regex-property</goal>
                        </goals>
                        <configuration>
                            <name>groupIdPath</name>
                            <value>${project.groupId}</value>
                            <regex>(\.)</regex>
                            <replacement>/</replacement>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>make-bundle</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                        <configuration>
                            <descriptors>
                                <descriptor>src/assembly/bundle.xml</descriptor>
                            </descriptors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <includes>
                    <include>**/*.*</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>